src/main/java/semantic/abstractSintaxTree/test/failing/classNotFound.ru
/? ClassNotFoundException
struct A{} impl A{ .(){}}
start {
    A a;

    a = new B();
}